Fix title line spacing

--- a/css/default.sass
+++ b/css/default.sass
@@ -25,6 +25,7 @@ html, body
 
   h1, h2
     color: $color-accent;
+    line-height: 3rem;
 
   .date
     color: $color-gray;
